--- a/join-game.html
+++ b/join-game.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>DenkstDu - Spiel beitreten</title>
+    <title>No-Cap - Spiel beitreten</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Favicon - Kappe Emoji -->
+    <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🧢</text></svg>">
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -47,47 +50,12 @@
         .particle:nth-child(1) { width: 80px; height: 80px; left: 10%; animation-delay: 0s; }
         .particle:nth-child(2) { width: 120px; height: 120px; left: 70%; animation-delay: 2s; }
         .particle:nth-child(3) { width: 60px; height: 60px; left: 30%; animation-delay: 4s; }
+        .particle:nth-child(4) { width: 100px; height: 100px; left: 50%; animation-delay: 5s; }
+        .particle:nth-child(5) { width: 90px; height: 90px; left: 80%; animation-delay: 6s; }
 
         @keyframes float {
             0%, 100% { transform: translateY(0px) rotate(0deg); opacity: 0.3; }
             50% { transform: translateY(-50px) rotate(180deg); opacity: 0.6; }
-        }
-
-        /* Connection Status */
-        .connection-status {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            border-radius: 10px;
-            padding: 10px 15px;
-            color: white;
-            font-size: 0.8rem;
-            z-index: 1000;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-
-        .connection-status.connected {
-            border: 1px solid #4CAF50;
-            background: rgba(76, 175, 80, 0.2);
-        }
-
-        .connection-status.disconnected {
-            border: 1px solid #f44336;
-            background: rgba(244, 67, 54, 0.2);
-        }
-
-        .connection-status.connecting {
-            border: 1px solid #ff9800;
-            background: rgba(255, 152, 0, 0.2);
-            animation: pulse 1s infinite;
-        }
-
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
         }
 
         .app-container {
@@ -214,21 +182,42 @@
 
         .game-info-preview.show {
             opacity: 1;
-            max-height: 300px;
+            max-height: 400px;
         }
 
         .info-title {
             color: white;
-            font-size: 1rem;
-            font-weight: 600;
+            font-size: 1.1rem;
+            font-weight: 700;
             margin-bottom: 15px;
             text-align: center;
+        }
+
+        .host-info {
+            background: rgba(76, 175, 80, 0.2);
+            border: 1px solid #4CAF50;
+            border-radius: 12px;
+            padding: 15px;
+            margin-bottom: 15px;
+            text-align: center;
+        }
+
+        .host-label {
+            color: rgba(255, 255, 255, 0.8);
+            font-size: 0.85rem;
+            margin-bottom: 5px;
+        }
+
+        .host-name {
+            color: white;
+            font-size: 1.2rem;
+            font-weight: 700;
         }
 
         .info-grid {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 15px;
+            gap: 12px;
         }
 
         .info-item {
@@ -246,7 +235,7 @@
 
         .info-value {
             color: white;
-            font-size: 0.9rem;
+            font-size: 0.95rem;
             font-weight: 600;
         }
 
@@ -372,15 +361,12 @@
             background: #f44336;
         }
 
+        .notification.success {
+            background: #4CAF50;
+        }
+
         /* Mobile Responsive */
         @media (max-width: 768px) {
-            .connection-status {
-                top: 80px;
-                right: 15px;
-                font-size: 0.7rem;
-                padding: 8px 12px;
-            }
-
             .header h1 {
                 font-size: 2rem;
             }
@@ -413,6 +399,8 @@
     <div class="particle"></div>
     <div class="particle"></div>
     <div class="particle"></div>
+    <div class="particle"></div>
+    <div class="particle"></div>
 </div>
 
 <!-- Loading -->
@@ -423,11 +411,6 @@
 
 <!-- Notification -->
 <div class="notification" id="notification"></div>
-
-<!-- Connection Status -->
-<div class="connection-status connecting" id="connection-status" onclick="retryConnection()">
-    🔄 Verbinde...
-</div>
 
 <!-- App Container -->
 <div class="app-container">
@@ -458,6 +441,12 @@
             <!-- Game Info Preview -->
             <div class="game-info-preview" id="game-info">
                 <div class="info-title">✅ Spiel gefunden!</div>
+
+                <div class="host-info">
+                    <div class="host-label">Host</div>
+                    <div class="host-name" id="info-host">-</div>
+                </div>
+
                 <div class="info-grid">
                     <div class="info-item">
                         <div class="info-label">Schwierigkeit</div>
@@ -525,7 +514,7 @@
 
         load() {
             try {
-                const saved = localStorage.getItem('denkstdu_game_state');
+                const saved = localStorage.getItem('nocap_game_state');
                 if (saved) {
                     const state = JSON.parse(saved);
                     if (state.timestamp && Date.now() - state.timestamp < 24 * 60 * 60 * 1000) {
@@ -553,7 +542,7 @@
                     timestamp: Date.now(),
                     version: 3
                 };
-                localStorage.setItem('denkstdu_game_state', JSON.stringify(state));
+                localStorage.setItem('nocap_game_state', JSON.stringify(state));
                 this.log('✅ State saved');
                 return true;
             } catch (error) {
@@ -563,7 +552,7 @@
         }
 
         clearStorage() {
-            localStorage.removeItem('denkstdu_game_state');
+            localStorage.removeItem('nocap_game_state');
             this.log('🗑️ Storage cleared');
         }
 
@@ -580,9 +569,6 @@
             this.isInitialized = false;
             this.isConnected = false;
             this.listeners = [];
-            this.connectionListeners = [];
-            this.retryAttempts = 0;
-            this.maxRetries = 3;
 
             this.config = {
                 apiKey: "AIzaSyC_cu_2X2uFCPcxYetxIUHi2v56F1Mz0Vk",
@@ -604,114 +590,34 @@
                     throw new Error('Firebase SDK nicht geladen');
                 }
 
-                this.log('✅ Firebase SDK geladen');
-
                 if (!firebase.apps || firebase.apps.length === 0) {
-                    this.log('🔧 Initialisiere Firebase App...');
                     this.app = firebase.initializeApp(this.config);
-                    this.log('✅ Firebase App initialisiert');
                 } else {
-                    this.log('ℹ️ Firebase App bereits initialisiert');
                     this.app = firebase.app();
                 }
 
-                this.log('🔧 Hole Database-Referenz...');
                 this.database = firebase.database();
-                this.log('✅ Database-Referenz erhalten');
-
                 await new Promise(resolve => setTimeout(resolve, 300));
 
-                this.log('🔧 Teste Verbindung...');
-                this.isConnected = await this.testConnectionWithTimeout(10000);
+                const connectedRef = this.database.ref('.info/connected');
+                const snapshot = await connectedRef.once('value');
+                this.isConnected = snapshot.val() === true;
 
                 if (this.isConnected) {
-                    this.log('✅ Firebase-Verbindung erfolgreich!');
-                    this.setupConnectionMonitoring();
                     this.isInitialized = true;
-                    this.retryAttempts = 0;
+                    this.log('✅ Firebase verbunden');
                 } else {
-                    this.log('⚠️ Firebase-Verbindung fehlgeschlagen', 'warning');
-                    this.isInitialized = false;
+                    this.log('⚠️ Firebase nicht verbunden');
                 }
 
                 return this.isInitialized;
 
             } catch (error) {
-                this.log(`❌ Firebase Initialisierung fehlgeschlagen: ${error.message}`, 'error');
+                this.log(`❌ Firebase Fehler: ${error.message}`, 'error');
                 this.isInitialized = false;
                 this.isConnected = false;
                 return false;
             }
-        }
-
-        async testConnectionWithTimeout(timeout = 10000) {
-            return new Promise(async (resolve) => {
-                const timeoutId = setTimeout(() => {
-                    this.log('⚠️ Verbindungstest Timeout', 'warning');
-                    resolve(false);
-                }, timeout);
-
-                try {
-                    const connectedRef = this.database.ref('.info/connected');
-                    const snapshot = await connectedRef.once('value');
-                    clearTimeout(timeoutId);
-                    const connected = snapshot.val() === true;
-                    this.log(`🔍 Verbindungstest: ${connected ? 'Verbunden' : 'Nicht verbunden'}`);
-                    resolve(connected);
-                } catch (error) {
-                    clearTimeout(timeoutId);
-                    this.log(`❌ Verbindungstest Fehler: ${error.message}`, 'error');
-                    resolve(false);
-                }
-            });
-        }
-
-        setupConnectionMonitoring() {
-            try {
-                this.log('🔧 Setup Verbindungsüberwachung...');
-                const connectedRef = this.database.ref('.info/connected');
-
-                const connectionListener = connectedRef.on('value', (snapshot) => {
-                    const wasConnected = this.isConnected;
-                    this.isConnected = snapshot.val() === true;
-
-                    if (wasConnected !== this.isConnected) {
-                        this.log(`🔄 Verbindungsstatus geändert: ${this.isConnected ? 'Verbunden ✅' : 'Getrennt ❌'}`);
-                        this.notifyConnectionChange(this.isConnected);
-                    }
-                });
-
-                this.listeners.push({ ref: connectedRef, listener: connectionListener });
-                this.log('✅ Verbindungsüberwachung aktiv');
-
-            } catch (error) {
-                this.log(`❌ Fehler beim Setup: ${error.message}`, 'error');
-            }
-        }
-
-        async retry() {
-            if (this.retryAttempts < this.maxRetries) {
-                this.retryAttempts++;
-                this.log(`🔄 Verbindungsversuch ${this.retryAttempts}/${this.maxRetries}...`);
-                return await this.initialize();
-            } else {
-                this.log('❌ Maximale Anzahl an Versuchen erreicht', 'error');
-                return false;
-            }
-        }
-
-        onConnectionChange(callback) {
-            this.connectionListeners.push(callback);
-        }
-
-        notifyConnectionChange(connected) {
-            this.connectionListeners.forEach(callback => {
-                try {
-                    callback(connected);
-                } catch (error) {
-                    this.log(`❌ Fehler beim Benachrichtigen: ${error.message}`, 'error');
-                }
-            });
         }
 
         async getGameData(gameId) {
@@ -731,10 +637,8 @@
             if (!this.isConnected) throw new Error('Keine Firebase-Verbindung');
 
             try {
-                // Generate unique player ID
-                const playerId = `player_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`;
+                const playerId = `guest_${playerName.replace(/[^a-zA-Z0-9]/g, '').toLowerCase()}_${Date.now()}_${Math.random().toString(36).substr(2, 4)}`;
 
-                // Add player to game
                 const playerRef = this.database.ref(`games/${gameId}/players/${playerId}`);
                 await playerRef.set({
                     name: playerName,
@@ -744,7 +648,6 @@
                     joinedAt: firebase.database.ServerValue.TIMESTAMP
                 });
 
-                // Get game data
                 const gameData = await this.getGameData(gameId);
 
                 this.log(`✅ Player ${playerId} joined game ${gameId}`);
@@ -762,7 +665,6 @@
 
         cleanup() {
             this.log('🧹 Cleanup...');
-
             this.listeners.forEach(({ ref, listener }) => {
                 try {
                     ref.off('value', listener);
@@ -770,10 +672,7 @@
                     this.log(`❌ Fehler beim Entfernen: ${error.message}`, 'error');
                 }
             });
-
             this.listeners = [];
-            this.connectionListeners = [];
-            this.log('✅ Cleanup abgeschlossen');
         }
 
         get isReady() {
@@ -781,13 +680,7 @@
         }
 
         log(message, type = 'info') {
-            const colors = {
-                info: '#4488ff',
-                warning: '#ffaa00',
-                error: '#ff4444',
-                success: '#00ff00'
-            };
-            console.log(`%c[Firebase] ${message}`, `color: ${colors[type] || colors.info}`);
+            console.log(`[Firebase] ${message}`);
         }
     }
 
@@ -800,13 +693,14 @@
     const categoryData = {
         fsk0: { name: 'Familie & Freunde', icon: '👨‍👩‍👧‍👦' },
         fsk16: { name: 'Party Time', icon: '🎉' },
-        fsk18: { name: 'Heiß & Gewagt', icon: '🔥' }
+        fsk18: { name: 'Heiß & Gewagt', icon: '🔥' },
+        special: { name: 'Special Edition', icon: '⭐' }
     };
 
     const difficultyNames = {
-        easy: 'Entspannt',
-        medium: 'Ausgewogen',
-        hard: 'Hardcore'
+        easy: 'Entspannt 😌',
+        medium: 'Ausgewogen 🎯',
+        hard: 'Hardcore 💀'
     };
 
     // ===== INITIALIZATION =====
@@ -818,60 +712,39 @@
         log('🎮 Join Game - Initialisierung...');
 
         gameState = new GameState();
-        gameState.clearStorage(); // Clear old state for new join
+        gameState.clearStorage();
 
         firebaseService = new FirebaseGameService();
 
-        // Initialize Firebase in background
-        updateConnectionStatus('connecting', '🔄 Verbinde...');
+        // Check for URL parameter
+        checkUrlParameter();
 
-        await new Promise(resolve => setTimeout(resolve, 500));
+        // Initialize Firebase in background (silent)
+        await firebaseService.initialize();
 
-        let firebaseReady = await firebaseService.initialize();
-
-        if (!firebaseReady) {
-            await new Promise(resolve => setTimeout(resolve, 1000));
-            firebaseReady = await firebaseService.retry();
-        }
-
-        if (firebaseReady) {
-            updateConnectionStatus('connected', '✅ Verbunden');
-            setupConnectionStatus();
+        if (firebaseService.isReady) {
+            log('✅ Firebase bereit');
         } else {
-            updateConnectionStatus('disconnected', '⚠️ Offline (Klicken zum Retry)');
+            log('⚠️ Firebase nicht verfügbar');
         }
 
         log('✅ Join Game bereit!');
     }
 
-    async function retryConnection() {
-        if (!firebaseService || firebaseService.isConnected) return;
+    function checkUrlParameter() {
+        const urlParams = new URLSearchParams(window.location.search);
+        const code = urlParams.get('code');
 
-        log('🔄 Neu-Verbindung...');
-        updateConnectionStatus('connecting', '🔄 Neu-Verbindung...');
+        if (code && code.length === 6) {
+            log(`🔗 URL-Parameter gefunden: ${code}`);
+            const gameCodeInput = document.getElementById('game-code');
+            gameCodeInput.value = code.toUpperCase();
 
-        const success = await firebaseService.retry();
-
-        if (success) {
-            updateConnectionStatus('connected', '✅ Verbunden');
-            showNotification('Erfolgreich verbunden!', 'success');
-        } else {
-            updateConnectionStatus('disconnected', '❌ Verbindung fehlgeschlagen');
-            showNotification('Verbindung fehlgeschlagen', 'error');
+            // Trigger check after short delay
+            setTimeout(() => {
+                handleGameCodeInput();
+            }, 500);
         }
-    }
-
-    function setupConnectionStatus() {
-        firebaseService.onConnectionChange((connected) => {
-            updateConnectionStatus(
-                connected ? 'connected' : 'disconnected',
-                connected ? '✅ Verbunden' : '⚠️ Offline'
-            );
-
-            if (connected) {
-                showNotification('Verbindung wiederhergestellt!', 'success');
-            }
-        });
     }
 
     // ===== GAME CODE HANDLING =====
@@ -921,9 +794,12 @@
                 throw new Error('Spiel bereits beendet');
             }
 
+            if (gameData.gameState === 'playing') {
+                throw new Error('Spiel läuft bereits');
+            }
+
             currentGameData = gameData;
 
-            // Show game info
             displayGameInfo(gameData);
             input.classList.add('valid');
 
@@ -941,6 +817,10 @@
 
     function displayGameInfo(gameData) {
         const infoDiv = document.getElementById('game-info');
+
+        // Host
+        const hostPlayer = Object.values(gameData.players || {}).find(p => p.isHost);
+        document.getElementById('info-host').textContent = hostPlayer ? hostPlayer.name : 'Unbekannt';
 
         // Difficulty
         document.getElementById('info-difficulty').textContent =
@@ -963,7 +843,7 @@
             playing: 'Läuft',
             finished: 'Beendet'
         };
-        document.getElementById('info-status').textContent = statusNames[gameData.gameState] || 'Unbekannt';
+        document.getElementById('info-status').textContent = statusNames[gameData.gameState] || 'Lobby';
 
         infoDiv.classList.add('show');
     }
@@ -999,7 +879,6 @@
         showLoading();
 
         try {
-            // Join game via Firebase
             const joinResult = await firebaseService.joinGame(gameCode, playerName);
 
             log('✅ Successfully joined!', joinResult);
@@ -1016,7 +895,6 @@
             gameState.gamePhase = 'lobby';
             gameState.timestamp = Date.now();
 
-            // Save state
             gameState.save();
 
             log('✅ Game state saved');
@@ -1024,7 +902,6 @@
             hideLoading();
             showNotification('Erfolgreich beigetreten! 🎉', 'success');
 
-            // Navigate to lobby
             setTimeout(() => {
                 window.location.href = 'multiplayer-lobby.html';
             }, 1500);
@@ -1062,12 +939,6 @@
         }, 3000);
     }
 
-    function updateConnectionStatus(status, message = '') {
-        const statusEl = document.getElementById('connection-status');
-        statusEl.textContent = message || status;
-        statusEl.className = `connection-status ${status}`;
-    }
-
     function log(message, type = 'info') {
         const colors = {
             info: '#4488ff',
@@ -1097,7 +968,7 @@
         });
     };
 
-    log('✅ Join Game v5.0 IMPROVED - vollständig geladen!');
+    log('✅ No-Cap Join Game - vollständig geladen!');
     log('🛠️ Debug: debugJoinGame()');
 </script>
 </body>
